--- a/contents/main.tex
+++ b/contents/main.tex
@@ -5,6 +5,7 @@
 % Include all sections
 \input{contents/introduction}
 \input{contents/background}
+\input{contents/problem_formulation}
 \input{contents/methodology}
 \input{contents/evaluation}
 \input{contents/conclusion}
