--- a/sample-base.bib
+++ b/sample-base.bib
@@ -1876,3 +1876,171 @@ address      = {Berlin},
   year = {2024},
   note = {Preprint; available at \url{https://github.com/MedicineToken/Medical-Graph-RAG}}
 }
+
+@article{Zou2023,
+  author    = {Zou, Andy and Wang, Zifan and Kolter, J. Zico and Fredrikson, Matt},
+  title     = {Universal and Transferable Adversarial Attacks on Aligned Language Models},
+  journal   = {arXiv preprint},
+  year      = {2023},
+  url       = {https://ar5iv.org/pdf/2307.15043.pdf}
+}
+
+@online{ArthurBlog2023,
+  author    = {{Arthur AI}},
+  title     = {From Jailbreaks to Gibberish: Understanding the Different Types of Prompt Injections},
+  year      = {2023},
+  url       = {https://www.arthur.ai/blog/from-jailbreaks-to-gibberish-understanding-the-different-types-of-prompt-injections},
+  urldate   = {2024-05-11}
+}
+
+@online{ArthurBlog2023b,
+  author    = {{Arthur AI}},
+  title     = {From Jailbreaks to Gibberish: Understanding the Different Types of Prompt Injections - Payload Splitting},
+  year      = {2023},
+  url       = {https://www.arthur.ai/blog/from-jailbreaks-to-gibberish-understanding-the-different-types-of-prompt-injections},
+  urldate   = {2024-05-11}
+}
+
+@online{ArthurBlog2023c,
+  author    = {{Arthur AI}},
+  title     = {From Jailbreaks to Gibberish: Understanding the Different Types of Prompt Injections - ArtPrompt Attacks},
+  year      = {2023},
+  url       = {https://www.arthur.ai/blog/from-jailbreaks-to-gibberish-understanding-the-different-types-of-prompt-injections},
+  urldate   = {2024-05-11}
+}
+
+@online{ArthurBlog2023d,
+  author    = {{Arthur AI}},
+  title     = {From Jailbreaks to Gibberish: Understanding the Different Types of Prompt Injections - Obfuscation},
+  year      = {2023},
+  url       = {https://www.arthur.ai/blog/from-jailbreaks-to-gibberish-understanding-the-different-types-of-prompt-injections},
+  urldate   = {2024-05-11}
+}
+
+@online{RobustIntelligence2023,
+  author    = {{Robust Intelligence}},
+  title     = {Prompt Injection Attack on GPT-4},
+  year      = {2023},
+  url       = {https://www.robustintelligence.com/blog-posts/prompt-injection-attack-on-gpt-4},
+  urldate   = {2024-05-11}
+}
+
+@online{LearnPrompting2023a,
+  author    = {{Learn Prompting}},
+  title     = {Obfuscation & Token Smuggling: Evasion Techniques in Prompt Hacking},
+  year      = {2023},
+  url       = {https://learnprompting.org/docs/prompt_hacking/offensive_measures/obfuscation},
+  urldate   = {2024-05-11}
+}
+
+@online{LearnPrompting2023b,
+  author    = {{Learn Prompting}},
+  title     = {Fill In the Blank Attack - Obfuscation & Token Smuggling},
+  year      = {2023},
+  url       = {https://learnprompting.org/docs/prompt_hacking/offensive_measures/obfuscation},
+  urldate   = {2024-05-11}
+}
+
+@online{Lakera2023a,
+  author    = {{Lakera}},
+  title     = {The ELI5 Guide to Prompt Injection: Techniques, Prevention Methods & Tools},
+  year      = {2023},
+  url       = {https://www.lakera.ai/blog/guide-to-prompt-injection},
+  urldate   = {2024-05-11}
+}
+
+@online{Lakera2023b,
+  author    = {{Lakera}},
+  title     = {The ELI5 Guide to Prompt Injection: Indirect Prompt Injection},
+  year      = {2023},
+  url       = {https://www.lakera.ai/blog/guide-to-prompt-injection},
+  urldate   = {2024-05-11}
+}
+
+@online{Lakera2023c,
+  author    = {{Lakera}},
+  title     = {The ELI5 Guide to Prompt Injection: Jailbreaking},
+  year      = {2023},
+  url       = {https://www.lakera.ai/blog/guide-to-prompt-injection},
+  urldate   = {2024-05-11}
+}
+
+@online{Lakera2023d,
+  author    = {{Lakera}},
+  title     = {The ELI5 Guide to Prompt Injection: Multi-Language Attacks},
+  year      = {2023},
+  url       = {https://www.lakera.ai/blog/guide-to-prompt-injection},
+  urldate   = {2024-05-11}
+}
+
+@online{Lakera2023e,
+  author    = {{Lakera}},
+  title     = {The ELI5 Guide to Prompt Injection: Prompt Leaking},
+  year      = {2023},
+  url       = {https://www.lakera.ai/blog/guide-to-prompt-injection},
+  urldate   = {2024-05-11}
+}
+
+@online{Lakera2023f,
+  author    = {{Lakera}},
+  title     = {The ELI5 Guide to Prompt Injection: Code Injection},
+  year      = {2023},
+  url       = {https://www.lakera.ai/blog/guide-to-prompt-injection},
+  urldate   = {2024-05-11}
+}
+
+@online{HiddenLayer2023,
+  author    = {{HiddenLayer}},
+  title     = {Prompt Injection Attacks on LLMs},
+  year      = {2023},
+  url       = {https://hiddenlayer.com/innovation-hub/prompt-injection-attacks-on-llms/},
+  urldate   = {2024-05-11}
+}
+
+@online{HiddenLayer2023b,
+  author    = {{HiddenLayer}},
+  title     = {Prompt Injection Attacks on LLMs - Prompt Hijacking},
+  year      = {2023},
+  url       = {https://hiddenlayer.com/innovation-hub/prompt-injection-attacks-on-llms/},
+  urldate   = {2024-05-11}
+}
+
+@online{OpenReview2023,
+  author    = {Anonymous},
+  title     = {Uncovering Model Vulnerabilities With Multi-Turn Red Teaming},
+  year      = {2023},
+  url       = {https://openreview.net/forum?id=fFtmpqLFvw},
+  urldate   = {2024-05-11}
+}
+
+@article{Oneshot2024,
+  author    = {Anonymous},
+  title     = {One-Shot is Enough: Consolidating Multi-Turn Attacks into Efficient Single-Turn Prompts for LLMs},
+  journal   = {arXiv preprint},
+  year      = {2024},
+  url       = {https://arxiv.org/html/2503.04856v1}
+}
+
+@online{Anthropic2024a,
+  author    = {{Anthropic}},
+  title     = {Many-shot jailbreaking},
+  year      = {2024},
+  url       = {https://www.anthropic.com/research/many-shot-jailbreaking},
+  urldate   = {2024-05-11}
+}
+
+@online{Anthropic2024b,
+  author    = {{Anthropic}},
+  title     = {Many-shot jailbreaking - Context Window Exploitation},
+  year      = {2024},
+  url       = {https://www.anthropic.com/research/many-shot-jailbreaking},
+  urldate   = {2024-05-11}
+}
+
+@article{ReasoningJailbreak2024,
+  author    = {Anonymous},
+  title     = {Reasoning-Augmented Conversation for Multi-Turn Jailbreak Attacks on Large Language Models},
+  journal   = {arXiv preprint},
+  year      = {2024},
+  url       = {https://arxiv.org/html/2502.11054v1}
+} 
