--- a/sample-manuscript.tex
+++ b/sample-manuscript.tex
@@ -51,6 +51,12 @@
 \usepackage{algorithm}
 \usepackage{algorithmicx}
 \usepackage{algpseudocode}
+\usepackage{geometry}
+\usepackage{longtable}
+\usepackage{array}
+\usepackage{hyperref}
+\usepackage{booktabs}
+\usepackage{natbib}
 \usetikzlibrary{shapes.geometric, arrows, positioning, fit, backgrounds, matrix, shapes.symbols, decorations.pathreplacing}
 
 %% \BibTeX command to typeset BibTeX logo in the docs
