Updates from Overleaf

--- a/contents/conclusion.tex
+++ b/contents/conclusion.tex
@@ -1,5 +1,5 @@
 \section{Limitations}
-Despite promising results, AGART has important limitations that inform future research directions. Computational overhead for graph maintenance scales with knowledge base size, potentially limiting real-time applications with very large attack corpora. Attack effectiveness depends on the quality and diversity of historical attack data, making the framework less effective in entirely novel domains. The current implementation has limited coverage of multilingual attack scenarios, presenting challenges for global deployment contexts. Additionally, the approach requires periodic updating to address evolving model defenses, necessitating ongoing maintenance.
+Despite promising results, AGART has important limitations that inform future research directions. Computational overhead for graph maintenance scales with knowledge base size, potentially limiting real-time applications with very large attack corpora. Attack effectiveness depends on the quality and diversity of historical attack data, making the framework less effective in entirely novel domains.
 
 \section{Future Work}
 Based on our findings and identified limitations, we propose three directions for future research. Advanced graph representations should be explored, including hierarchical graph structures and dynamic graph evolution mechanisms to better model complex attack relationships and adaptation patterns, helping overcome current scalability limitations while enabling more nuanced semantic relationships. Additionally, expanding to multimodal attacks represents an important frontier, extending the framework to handle combinations of text, images, audio, and other modalities, as understanding cross-modal attack transfer will be crucial for comprehensive security evaluation of increasingly prevalent multimodal LLMs. Finally, defensive applications of the framework should be investigated, as the same graph-based representation that enables effective attacks could be repurposed to develop more robust defense mechanisms, potentially enabling co-evolutionary approaches where defensive and offensive systems improve together.
