--- a/contents/background.tex
+++ b/contents/background.tex
@@ -54,9 +54,13 @@ The security of Large Language Models (LLMs) has become a significant focus due 
     \end{longtable}
 
     
-\subsection{Self-Adaptive Attack Generation Techniques}
+    \subsection{Self-Adaptive Attack Generation Techniques}
 
-Red-teaming methodologies have evolved rapidly, transitioning from manual techniques to automated, AI-assisted tools. State-of-the-art approaches span several methodologies: Gradient-based Optimization approaches like GCG~\cite{zou2023universal} leverage gradient information to optimize adversarial suffixes; Evolutionary methods such as GBDA~\cite{guo2021gradient} generate and evolve adversarial prompts through mutation and selection; Reinforcement Learning techniques like AutoDAN~\cite{liu2023autodan} employ RL to optimize attack strategies based on model feedback; and Multi-agent Systems such as RedAgent~\cite{xu2024redagent} use collaborative frameworks to discover novel attack vectors.
+    Recent advancements in LLM security research have led to the development of sophisticated self-adaptive attack generation techniques. One prominent approach involves using reinforcement learning (RL) to train attack agents that can automatically discover vulnerabilities in target models \citep{RedTeamSurvey2024}. Researchers have developed RL-based frameworks where attacker models learn to generate prompts that maximize undesirable behavior, often measured by an auxiliary safety classifier. Notable implementations include the use of GFlowNets for efficient sampling of high-reward prompts and curiosity-driven exploration mechanisms that encourage the discovery of novel model behaviors rather than just known exploits \citep{RedTeamSurvey2024}.
+    
+    The evolution of automated attack generation has also seen the emergence of genetic algorithms and evolutionary strategies. These approaches treat prompt discovery as an evolutionary search problem, where a population of potential attacks undergoes mutations and crossovers to produce increasingly effective variants. For example, LLM-Fuzzer employs mutation strategies on seed jailbreaks to discover new attack variants with higher success rates \citep{LLMFuzzer2024}. This is complemented by Bayesian optimization techniques that enable query-efficient black-box testing, allowing researchers to find diverse failure cases while minimizing API calls. Additionally, automated frameworks like FuzzLLM have introduced template-based approaches that combine multiple attack strategies, systematically varying elements such as roles, styles, and hidden triggers to generate comprehensive test suites \citep{FuzzLLM2024}.
+    
+    The effectiveness of these self-adaptive techniques is further enhanced through multi-agent frameworks and transferability testing \citep{RedTeamSurvey2024}. Systems like RedAgent employ multiple LLM instances in attacker and defender roles, enabling the discovery of vulnerabilities that only emerge through complex interaction patterns. The ReNeLLM framework specifically focuses on generating jailbreak prompts that work across diverse model architectures. These approaches are particularly valuable for identifying universal vulnerabilities that could affect multiple LLM deployments. The combination of these techniques has led to more systematic and scalable red teaming capabilities, with automated systems often rediscovering known exploits while also uncovering novel attack vectors that human testers might miss \citep{RedTeamSurvey2024}.
 
 These approaches have demonstrated success in discovering vulnerabilities but fail to adapt to evolving model defenses. Additionally, they lack the ability to leverage semantic relationships between attack strategies.
 
