--- a/contents/methodology.tex
+++ b/contents/methodology.tex
@@ -50,9 +50,10 @@
 \label{fig:architecture}
 \end{figure}
 
-AGART comprises four integrated components forming a closed-loop adaptive system. The Knowledge Graph Manager encodes the semantic space of attack techniques, maintaining a comprehensive graph representation of prompts, vulnerabilities, and their relationships. The Attack Orchestrator coordinates the overall attack strategy, selecting promising attack paths based on model feedback. The Prompt Synthesizer generates and mutates attack inputs by composing graph-derived components with context-aware modifications. The Evaluation Engine analyzes model responses to determine attack success and updates the knowledge graph with new insights.
+AGART comprises four integrated components forming a closed-loop adaptive system. The Knowledge Graph Manager encodes the semantic space of attack techniques, maintaining a comprehensive graph representation of prompts, vulnerabilities, and their relationships. The Attack Orchestrator coordinates the overall attack strategy, selecting promising attack paths based on model feedback. The Prompt Synthesizer generates and mutates attack inputs by composing graph-derived components with context-aware modifications. The Evaluation Engine analyzes model responses to determine attack success and updates the knowledge graph with new insights. Figure~\ref{fig:architecture} illustrates the high-level architecture of our system.
 
 \subsection{Graph-Augmented Knowledge Representation}
+
 The core innovation of AGART is its structured knowledge representation of the attack space. We transform a comprehensive corpus of over 3,000 historical adversarial prompts and 30+ distinct attack methodologies into a semantic knowledge graph using the GraphRAG approach~\cite{GraphRAG}. 
 
 Our graph structure contains Prompt Nodes containing individual prompts with metadata on language, name, and historical effectiveness. These nodes are connected through semantically meaningful edges: technique-prompt associations, semantic similarity relationships based on embedding proximity, and historical performance edges weighted by past success rates.
@@ -132,10 +133,10 @@ The attack begins with an initial prompt p selected from the knowledge graph. In
 
 \subsection{Implementation}
 
-The AGART framework was implemented using python and GraphRAG package. We interface with commercial and open-source LLM APIs for attack evaluation, maintaining strict ethical protocols throughout the testing process. 
+The AGART framework was implemented in Python, leveraging the GraphRAG package from Microsoft\cite{GraphRAG} for knowledge graph operations and modern LLM APIs for attack evaluation. Our implementation follows strict ethical protocols throughout the testing process, with comprehensive logging and monitoring systems to ensure responsible research practices. The core system architecture comprises four main components: the Knowledge Graph Manager for semantic space encoding, Attack Orchestrator for strategy coordination, Prompt Synthesizer for input generation, and Evaluation Engine for response analysis. Each component is designed with modular interfaces, enabling easy integration of new attack techniques and defense mechanisms.
 
-Several important design considerations guided our implementation. First, balancing adaptivity with computational efficiency required careful optimization. While deep RL approaches offer high adaptability, they introduce significant computational overhead. Our hybrid approach uses efficient graph traversal as the primary adaptation mechanism, with lightweight RL for local optimization, significantly reducing computational requirements.
+For the reinforcement learning component, we employ a lightweight Q-learning approach with experience replay, as shown in Figure~\ref{fig:rl_architecture}. The state space $s_t = \phi(r_t, p_t)$ encodes response features and prompt context, while actions $a_t$ select prompts from graph-retrieved candidates. Our hierarchical reward function $R(s_t, a_t, s_{t+1}) = \alpha R_{\text{success}} + \beta R_{\text{progress}} + \gamma R_{\text{novelty}} - \delta R_{\text{penalty}}$ guides learning with coefficients $[\alpha, \beta, \gamma, \delta] = [1.0, 0.5, 0.2, 0.3]$. The Q-learning update follows $Q(s_t, a_t) \leftarrow Q(s_t, a_t) + \alpha[r_t + \gamma \max_{a'} Q(s_{t+1}, a') - Q(s_t, a_t)]$ with learning rate $\alpha = 0.1$, discount factor $\gamma = 0.9$, and annealing exploration rate $\epsilon_t = 0.3 \cdot 0.95^t$.
 
-Second, ensuring interpretability while maintaining attack effectiveness presented a challenge. Rather than employing black-box optimization, our graph-based approach maintains explicit reasoning pathways, enabling security researchers to understand why specific attacks succeed and how they evolve in response to defenses.
+The knowledge graph implementation utilizes a hierarchical embedding structure for efficient semantic retrieval. At the core, we employ a combination of OpenAI embeddings for semantic similarity and graph neural networks for structural pattern recognition, as described in Microsoft paper. The graph is continuously updated through an incremental learning process, where new attack patterns and their effectiveness are encoded as node properties and edge weights. This approach enables efficient querying of relevant attack components while maintaining the semantic relationships between different attack strategies.
 
-Technical implementation challenges included managing computational overhead in graph operations, optimizing embedding quality for semantic retrieval, and preventing "reward hacking" in the RL component. We addressed these through incremental graph updates, hierarchical embedding techniques, and carefully designed reward functions incorporating both success signals and semantic diversity measures.
+Performance optimization was a key focus throughout the implementation. We addressed several critical challenges: (1) computational efficiency through sparse state representation and selective graph updates, (2) catastrophic forgetting mitigation via distributed knowledge storage across the graph structure, (3) cold-start handling through efficient knowledge transfer from historical attack patterns, and (4) explainability maintenance through explicit reasoning pathways in the graph structure. These optimizations enable AGART to operate efficiently even with limited computational resources while maintaining its adaptive capabilities and interpretability for security research.
