--- a/sample-base.bib
+++ b/sample-base.bib
@@ -2044,3 +2044,27 @@ address      = {Berlin},
   year      = {2024},
   url       = {https://arxiv.org/html/2502.11054v1}
 } 
+
+@article{RedTeamSurvey2024,
+    author    = {Anonymous},
+    title     = {Recent advancements in LLM Red-Teaming: Techniques, Defenses, and Ethical Considerations},
+    journal   = {arXiv preprint},
+    year      = {2024},
+    url       = {https://arxiv.org/html/2410.09097v2}
+}
+
+@article{LLMFuzzer2024,
+    author    = {Yu, Jiahao and others},
+    title     = {Scaling Assessment of Large Language Model Jailbreaks},
+    journal   = {USENIX Security Symposium},
+    year      = {2024},
+    url       = {https://www.usenix.org/conference/usenixsecurity24/presentation/yu-jiahao}
+}
+
+@article{FuzzLLM2024,
+    author    = {Yao, Yue and others},
+    title     = {FuzzLLM: A Novel and Universal Fuzzing Framework for Proactively Discovering Jailbreak Vulnerabilities in Large Language Models},
+    journal   = {arXiv preprint},
+    year      = {2024},
+    url       = {https://arxiv.org/abs/2309.05274}
+}
