Updates from Overleaf

--- a/sample-base.bib
+++ b/sample-base.bib
@@ -1870,6 +1870,16 @@ address      = {Berlin},
   note = {Preprint}
 }
 
+@misc{GraphRAG,
+      title={From Local to Global: A Graph RAG Approach to Query-Focused Summarization}, 
+      author={Darren Edge and Ha Trinh and Newman Cheng and Joshua Bradley and Alex Chao and Apurva Mody and Steven Truitt and Dasha Metropolitansky and Robert Osazuwa Ness and Jonathan Larson},
+      year={2025},
+      eprint={2404.16130},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2404.16130}, 
+}
+
 @misc{wu2024medical,
   title = {Medical Graph RAG: Towards Safe Medical Large Language Model via Graph Retrieval-Augmented Generation},
   author = {Wu, Junde and Zhu, Jiayuan and Qi, Yunli and Chen, Jingkun and Xu, Min and Menolascina, Filippo and Grau, Vicente},
