--- a/contents/methodology.tex
+++ b/contents/methodology.tex
@@ -14,7 +14,7 @@
 ]
 
 % Core components
-\node[module] (kgm) {Knowledge Graph\\Manager};
+\node[module] (kgm) {Knowledge Graph Manager};
 \node[module] (ao) [right=of kgm] {Attack\\Orchestrator};
 \node[module] (ps) [right=of ao] {Prompt\\Synthesizer};
 \node[module] (ee) [below=of ao] {Evaluation\\Engine};
@@ -54,7 +54,7 @@ AGART comprises four integrated components forming a closed-loop adaptive system
 
 \subsection{Graph-Augmented Knowledge Representation}
 
-The core innovation of AGART is its structured knowledge representation of the attack space. We transform a comprehensive corpus of over 3,000 historical adversarial prompts and 30+ distinct attack methodologies into a semantic knowledge graph using the GraphRAG approach~\cite{GraphRAG}. 
+The core innovation of AGART is its structured knowledge representation of the attack space. We transform a comprehensive corpus of over 3,000 historical adversarial prompts and 15+ distinct attack methodologies into a semantic knowledge graph using the GraphRAG approach~\cite{GraphRAG}. 
 
 Our graph structure contains Prompt Nodes containing individual prompts with metadata on language, name, and historical effectiveness. These nodes are connected through semantically meaningful edges: technique-prompt associations, semantic similarity relationships based on embedding proximity, and historical performance edges weighted by past success rates.
 % only prompt node
@@ -135,7 +135,7 @@ The attack begins with an initial prompt p selected from the knowledge graph. In
 
 The AGART framework was implemented in Python, leveraging the GraphRAG package from Microsoft\cite{GraphRAG} for knowledge graph operations and modern LLM APIs for attack evaluation. Our implementation follows strict ethical protocols throughout the testing process, with comprehensive logging and monitoring systems to ensure responsible research practices. The core system architecture comprises four main components: the Knowledge Graph Manager for semantic space encoding, Attack Orchestrator for strategy coordination, Prompt Synthesizer for input generation, and Evaluation Engine for response analysis. Each component is designed with modular interfaces, enabling easy integration of new attack techniques and defense mechanisms.
 
-For the reinforcement learning component, we employ a lightweight Q-learning approach with experience replay, as shown in Figure~\ref{fig:rl_architecture}. The state space $s_t = \phi(r_t, p_t)$ encodes response features and prompt context, while actions $a_t$ select prompts from graph-retrieved candidates. Our hierarchical reward function $R(s_t, a_t, s_{t+1}) = \alpha R_{\text{success}} + \beta R_{\text{progress}} + \gamma R_{\text{novelty}} - \delta R_{\text{penalty}}$ guides learning with coefficients $[\alpha, \beta, \gamma, \delta] = [1.0, 0.5, 0.2, 0.3]$. The Q-learning update follows $Q(s_t, a_t) \leftarrow Q(s_t, a_t) + \alpha[r_t + \gamma \max_{a'} Q(s_{t+1}, a') - Q(s_t, a_t)]$ with learning rate $\alpha = 0.1$, discount factor $\gamma = 0.9$, and annealing exploration rate $\epsilon_t = 0.3 \cdot 0.95^t$.
+For the reinforcement learning component, we employ a lightweight Q-learning approach with experience replay. The state space $s_t = \phi(r_t, p_t)$ encodes response features and prompt context, while actions $a_t$ select prompts from graph-retrieved candidates. Our hierarchical reward function $R(s_t, a_t, s_{t+1}) = \alpha R_{\text{success}} + \beta R_{\text{progress}} + \gamma R_{\text{novelty}} - \delta R_{\text{penalty}}$ guides learning with coefficients $[\alpha, \beta, \gamma, \delta] = [1.0, 0.5, 0.2, 0.3]$. The Q-learning update follows $Q(s_t, a_t) \leftarrow Q(s_t, a_t) + \alpha[r_t + \gamma \max_{a'} Q(s_{t+1}, a') - Q(s_t, a_t)]$ with learning rate $\alpha = 0.1$, discount factor $\gamma = 0.9$, and annealing exploration rate $\epsilon_t = 0.3 \cdot 0.95^t$.
 
 The knowledge graph implementation utilizes a hierarchical embedding structure for efficient semantic retrieval. At the core, we employ a combination of OpenAI embeddings for semantic similarity and graph neural networks for structural pattern recognition, as described in Microsoft paper. The graph is continuously updated through an incremental learning process, where new attack patterns and their effectiveness are encoded as node properties and edge weights. This approach enables efficient querying of relevant attack components while maintaining the semantic relationships between different attack strategies.
 
